--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
         document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
       }
     </script>
+    <style>
+      #root{
+        background-image: url("./img/background.jpg");
+        background-size: cover
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
