--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="stylesheet" href="./public/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="./public/bootstrap/css/bootstrap-theme.css">
+<!--    <link rel="stylesheet" href="./public/bootstrap/css/bootstrap.css">-->
+<!--    <link rel="stylesheet" href="./public/bootstrap/css/bootstrap-theme.css">-->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script type="javascript" src="bootstrap/js/bootstrap.js"></script>
